clusters/production/external-servers/searxng/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
spec:
  ports:
    - name: http
      port: 8888
      targetPort: 8888
      protocol: TCP
