clusters/production/external-servers/searxng/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: searxng-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`searxng.home.jonahsserver.com`)
      kind: Rule
      services:
        - name: searxng
          port: 8888
          scheme: http
